fix: update favicon and adjust spacing in Conga.css

--- a/src/router/pages/styles/Conga.css
+++ b/src/router/pages/styles/Conga.css
@@ -8,7 +8,7 @@
 
 .conga-content {
   padding: 32px 16px;
-  gap: 40px;
+  gap: 16px;
   height: 100%;
   width: 80%;
   display: flex;
@@ -198,7 +198,6 @@
 
 @media (max-width: 600px) {
   .conga-content {
-    width: 100%;
-    padding: 16px;
+    padding: 12px;
   }
 }
